--- a/HTML/notes/basic_site.html
+++ b/HTML/notes/basic_site.html
@@ -3,9 +3,6 @@
   <head>
       <meta charset="UTF-8">
       <title>html basics</title>
-      <style>
-
-      </style>
   </head>
   <body>
     <section>
@@ -14,11 +11,11 @@
 
         <h1>heading 1</h1>
         <h2>heading 2</h2>
-        <h3>heading 3</h3>
+        <h3 class="myel">heading 3</h3>
         <h4>heading 4</h4>
-        <h5>heading 5</h5>
+        <h5 class="myel">heading 5</h5>
         <h6>heading 6</h6>
-        <details>
+        <details class="myel">
             <summary>Headers code</summary>
             <code><pre>
                 &#60;h1&#62;Heading 1&#60;/h1&#62;
